added server details modal

--- a/src/app/header/page.module.css
+++ b/src/app/header/page.module.css
@@ -1,5 +1,5 @@
 .dashboard{
-    background-color: #3498db; /* Header background color */
+    background-color: black; /* Header background color */
     padding: 20px;
     display: flex;
     justify-content: space-between;
