--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -21,3 +21,16 @@
 .searchTerm{
     margin: 5px;
 }
+/* Media query for mobile devices */
+@media only screen and (max-width: 768px) {
+    /* Styles specific to mobile devices go here */
+  
+    .searchInput{
+        background: transparent;
+        width: 55vw;
+        border: 1px solid grey;
+        border-radius: 16px;
+        padding:5px 20px;
+    }
+  
+  }
