--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -21,6 +21,10 @@
 .searchTerm{
     margin: 5px;
 }
+.dashboardDiv{
+    position: absolute;
+  top:8%;
+}
 /* Media query for mobile devices */
 @media only screen and (max-width: 768px) {
     /* Styles specific to mobile devices go here */
